overflow fix

--- a/src/assets/styles/blocks/_common/hero.scss
+++ b/src/assets/styles/blocks/_common/hero.scss
@@ -37,7 +37,6 @@
   position: absolute;
   top: calc(38 * 100 / 1200)%;
   right: 32px;
-  z-index: 99999;
 
   @include phones {
     top: 10px;
